dxDataGrid: fix the group panel text hiding with an ellipsis at overlapping (T462998) (#37)
* dxDataGrid: preventing a groupPanel text's overlapping by the other toolbar elements (T462998)

* small cleanup

* dxToolbar - allow to hide item's content with custom html

* dxDataGrid: remove a text stub from toolbar item's options

* rid of an excessive resize event triggering

--- a/styles/widgets/generic/dataGrid.generic.less
+++ b/styles/widgets/generic/dataGrid.generic.less
@@ -72,6 +72,10 @@
         }
     }
 
+    .dx-datagrid-group-panel {
+        font-size: @GENERIC_BASE_FONT_SIZE;
+    }
+
     .dx-menu {
         background-color: transparent;
         height: 100%;
