--- a/styles/widgets/ios7/dataGrid.ios7.less
+++ b/styles/widgets/ios7/dataGrid.ios7.less
@@ -59,6 +59,10 @@
         }
     }
 
+    .dx-datagrid-group-panel {
+        font-size: @IOS7_BASE_FONT_SIZE;
+    }
+
     .dx-menu {
         .dx-menu-item.dx-state-focused,
         .dx-menu-item.dx-state-active {
