--- a/styles/widgets/win10/dataGrid.win10.less
+++ b/styles/widgets/win10/dataGrid.win10.less
@@ -93,6 +93,10 @@
         padding: 7px 12px;
     }
 
+    .dx-datagrid-group-panel {
+        font-size: @WIN10_BASE_FONT_SIZE;
+    }
+
     .dx-menu {
         background-color: transparent;
     }
